# sap-proxy

./: .gitignore  Dockerfile  Makefile  Pipfile  readme.md
.github/workflows/: build-docker.yml
client/: Pipfile  pyproject.toml  test.py
client/src/: main.py
client/src/blyss_vectors/: __init__.py  attest.py  main.py
client/test/: basic.py  example.py
config/: Dockerfile.prod  Dockerfile.test  host.sh  launch.sh  nitro-config-prod.json
server/: Dockerfile  launch.sh
server/src/: pc.py  proxy.py  sap.py
src/: pc.py  proxy.py  sap.py  test.py
